5.0.20
------
(RB=692255)
Fix a minor d2 update bug that affects the printout values in the logfile.

(RB=693693)
Save resolved ip address into request context keyed by REMOTE_SERVER_ADDR in HttpNettyClient. It enables container to implement IPv6CallTracker+Sensor to track outbound traffic
Disable transient TestMIMEIntegrationReaderWriter suggested by the test case owner

5.0.19
------
(RB=684343)
Fix a bug in R2 query tunnel with wrong content length

5.0.18
------
(RB=649172)
Improve memory and performance efficiency for LoadBalancerState and fix the dirty bits in the hasing in ConsistentHashRing
(RB=684462)
Fix a flaky r2 test where the callback executor is shutdown before entity
stream of the response is read

5.0.17
------
(RB=670945)
Fix compatibility impact for added/removed fields in union
(RB=671103)
Offset method in buffer chain should return 0 if start and end are the same
(RB=676924)
Add ability to access RequestContext local attributes from FilterRequestContext

5.0.16
------
(RB=668458)
Add hasBindingMethods to RequestBuilderSpec to support generating request builders based on type binding information.

5.0.15
------
(RB=670021)
check for writehandle not null in connector

5.0.14
------
(RB=666783)
Add support for "x-snappy-framed" encoding in rest compression filter 

5.0.13
------
(RB=668278)
Fix a race condition in StreamExecutionCallback

5.0.12
------
(RB=665715)
Do not create https transport client if SSL context is not available

5.0.11
------
(RB=664750)
Fix a bug when detecting cookies name with $ sign at the beginning. Check $ sign in the trimed name.

5.0.10
------
(RB=653970)
Write missing d2 configurations into zookeeper.
(RB=665296)
Relax the SSL Context/Parameter checking for d2.

5.0.9
-----
(RB=647541)
Allow array of union be resource method parameter.

5.0.8
-----
(RB=611897)
Validate data returned from create and get.

(RB=636452)
Notify listeners when SimpleLoadBalancerState shutdown

(RB=648493)