@@ -7,6 +7,9 @@ Fix a minor d2 update bug that affects the printout values in the logfile.
 Save resolved ip address into request context keyed by REMOTE_SERVER_ADDR in HttpNettyClient. It enables container to implement IPv6CallTracker+Sensor to track outbound traffic
 Disable transient TestMIMEIntegrationReaderWriter suggested by the test case owner
 
+(RB=689884)
+Add MockRestliResponseExceptionBuilder.
+
 5.0.19
 ------
 (RB=684343)
@@ -42,7 +45,7 @@ check for writehandle not null in connector
 5.0.14
 ------
 (RB=666783)
-Add support for "x-snappy-framed" encoding in rest compression filter 
+Add support for "x-snappy-framed" encoding in rest compression filter
 
 5.0.13
 ------
